package InstrumentoCuerda;

public class Guitarra {
    public Guitarra() {
        //Constructor guitarra
    }
}
