package InstrumentoCuerda;

public class Violin {
    public Violin() {
        //Constructor violin
    }
}
