package InstrumentoPercusion;

public class Bombo {
    public Bombo() {
        //Constructor bombo
    }
}
