package InstrumentoPercusion;

public class Bongo {
    public Bongo() {
        //Constructor bongo
    }
}
