package InstrumentoPercusion;

public class Cajon {
    public Cajon() {
        //Constructor cajon
    }
}
