package InstrumentoViento;

public class FlautaTraversa {
    public FlautaTraversa() {
        //Constructor flauta traversa
    }
}
