import java.io.FileReader;
import java.io.BufferedReader;
import ucn.*;

public class SystemImpl implements System {
    private ListaInstrumento instrumento;
    public SystemImpl() {
        this.instrumento = new ListaInstrumento();
        this.Menu();
    }

    public void AgregarInstrumento(String csv_prueba) {

    }

    public void VenderInstrumento(String Codigo) {

    }

    public void ConsultarInventario(String Tipo, String Codigo) {

    }

    public void Terminar() {

    }

    public void Menu() {

    }

    public int Opcion() {

    }

    public void AgregarInstrumento() {

    }

    public void VenderInstrumento() {

    }

    public void ConsultarInventario() {

    }

    public void CerrarSistema() {

    }
}
